--- a/index.html
+++ b/index.html
@@ -158,6 +158,20 @@
       <h2 class="heading">Latest <span>Projects</span></h2>
       <div class="portfolio-container">
         <div class="portfolio-cards">
+          <img src="portfolio images/weather.jpg" alt="weight" />
+          <div class="portfolio-layer">
+            <h4>Atmospy - a weather checking webApp</h4>
+            <p>
+              Explore weather with ease. Search cities or choose from presets. Stay updated on temperature, humidity, wind speed, and more. Plan confidently with our intuitive and accurate weather web app.
+            </p>
+            <a
+              href="https://akinurrahman.github.io/weather-App/"
+              target="_blank"
+              ><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i
+            ></a>
+          </div>
+        </div>
+        <div class="portfolio-cards">
           <img src="portfolio images/weight.jpg" alt="weight" />
           <div class="portfolio-layer">
             <h4>Weight-to-Price Converter</h4>
@@ -222,7 +236,7 @@
           </div>
         </div>
 
-        <div class="portfolio-cards">
+        <!-- <div class="portfolio-cards">
           <img src="portfolio images/note taking app.jpg" alt="note" />
           <div class="portfolio-layer">
             <h4>Note Taking App</h4>
@@ -235,7 +249,7 @@
               ><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i
             ></a>
           </div>
-        </div>
+        </div> -->
 
         <div class="portfolio-cards">
           <img src="portfolio images/bulb.jpg" alt="bulb" />
