--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <div class="social-media">
           <a
-            href="https://www.linkedin.com/in/akinur-rahman-95a96b263/"
+            href="https://www.linkedin.com/in/akinurrahman/"
             target="_blank"
             ><i class="fa-brands fa-linkedin-in"></i
           ></a>
@@ -87,7 +87,7 @@
           explore possibilities!
         </p>
         <a
-          href="https://www.linkedin.com/in/akinur-rahman-95a96b263/"
+          href="https://www.linkedin.com/in/akinurrahman/"
           target="_black"
           class="btn"
           >Read More on LinkedIn</a
@@ -110,7 +110,7 @@
             and ignited my passion for technology.
           </p>
           <a
-            href="https://www.linkedin.com/in/akinur-rahman-95a96b263/"
+            href="https://www.linkedin.com/in/akinurrahman/"
             target="_blank"
             class="btn"
             >Read More</a
@@ -127,7 +127,7 @@
             fostering critical thinking and problem-solving skills.
           </p>
           <a
-            href="https://www.linkedin.com/in/akinur-rahman-95a96b263/"
+            href="https://www.linkedin.com/in/akinurrahman/"
             target="_blank"
             class="btn"
             >Read More</a
@@ -144,7 +144,7 @@
             web development
           </p>
           <a
-            href="https://www.linkedin.com/in/akinur-rahman-95a96b263/"
+            href="https://www.linkedin.com/in/akinurrahman/"
             target="_blank"
             class="btn"
             >Read More</a
