--- a/index.html
+++ b/index.html
@@ -57,10 +57,11 @@
             ><i class="fa-regular fa-envelope"></i
           ></a>
         </div>
+        <!-- href="https://docs.google.com/document/d/1ou72MZiZdUw9oeAq66opjF7MPgFf7zwWFuoxRLBLeWQ/edit?usp=sharing" -->
         <a
-          href="https://docs.google.com/document/d/1ou72MZiZdUw9oeAq66opjF7MPgFf7zwWFuoxRLBLeWQ/edit?usp=sharing"
-          target="_blank"
-          class="btn"
+          href=""
+          
+          class="btn alert" 
           >Download Resume</a
         >
       </div>
