--- a/index.html
+++ b/index.html
@@ -237,20 +237,7 @@
           </div>
         </div>
 
-        <!-- <div class="portfolio-cards">
-          <img src="portfolio images/note taking app.jpg" alt="note" />
-          <div class="portfolio-layer">
-            <h4>Note Taking App</h4>
-            <p>
-              A feature-rich note-taking application that allows users to
-              create, edit, and organize their notes effectively, offering a
-              convenient way to capture and manage information.
-            </p>
-            <a href="#"
-              ><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i
-            ></a>
-          </div>
-        </div> -->
+        
 
         <div class="portfolio-cards">
           <img src="portfolio images/bulb.jpg" alt="bulb" />
@@ -272,7 +259,7 @@
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Me</span></h2>
 
-      <form action="#">
+      <form>
         <div class="input-box">
           <input type="text" placeholder="Full Name" />
           <input type="email" placeholder="Email Address" />
