--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
         </p>
 
         <div class="social-media">
-          <a
-            href="https://www.linkedin.com/in/akinurrahman/"
-            target="_blank"
+          <a href="https://www.linkedin.com/in/akinurrahman/" target="_blank"
             ><i class="fa-brands fa-linkedin-in"></i
           ></a>
           <a href="https://wa.me/917099119857" target="_blank"
@@ -58,12 +56,7 @@
           ></a>
         </div>
         <!-- href="https://docs.google.com/document/d/1ou72MZiZdUw9oeAq66opjF7MPgFf7zwWFuoxRLBLeWQ/edit?usp=sharing" -->
-        <a
-          href=""
-          
-          class="btn alert" 
-          >Download Resume</a
-        >
+        <a href="" class="btn alert">Download Resume</a>
       </div>
 
       <div class="home-img">
@@ -161,12 +154,14 @@
         <div class="portfolio-cards">
           <img src="portfolio images/weather.jpg" alt="weight" />
           <div class="portfolio-layer">
-            <h4>Atmospy - a weather checking webApp</h4>
+            <h4>Weather App</h4>
             <p>
-              Explore weather with ease. Search cities or choose from presets. Stay updated on temperature, humidity, wind speed, and more. Plan confidently with our intuitive and accurate weather web app.
+              Explore weather with ease. Search cities or choose from presets.
+              Stay updated on temperature, humidity, wind speed, and more. Plan
+              confidently with our intuitive and accurate weather web app.
             </p>
             <a
-              href="https://akinurrahman.github.io/weather-App/"
+              href="https://64d7611a9f906a6fce8c2bca--graceful-tanuki-9070d3.netlify.app/"
               target="_blank"
               ><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i
             ></a>
@@ -237,17 +232,15 @@
           </div>
         </div>
 
-        
-
         <div class="portfolio-cards">
-          <img src="portfolio images/bulb.jpg" alt="bulb" />
+          <img src="portfolio images/todolist.png" alt="todo" />
           <div class="portfolio-layer">
-            <h4>Bulb On/Off</h4>
+            <h4>Todo-List</h4>
             <p>
-              An interactive project that simulates a bulb that can be switched
-              on and off, demonstrating basic interactivity using JavaScript.
+              Check out my Todo List app created using React. Stay organized by
+              managing your tasks with this interactive app.
             </p>
-            <a href="https://akinurrahman.github.io/bulb/" target="_blank"
+            <a href="https://super-yeot-5996a4.netlify.app/" target="_blank"
               ><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i
             ></a>
           </div>
