--- a/index.html
+++ b/index.html
@@ -217,15 +217,13 @@
         </div>
 
         <div class="portfolio-cards">
-          <img src="portfolio images/tempreture.jpg" alt="temperature" />
+          <img src="portfolio images/shopping-cart.avif" alt="shopping" />
           <div class="portfolio-layer">
-            <h4>Temperature Calculator</h4>
+            <h4>Shopping Cart</h4>
             <p>
-              A handy tool for converting temperatures between different units,
-              providing quick and accurate temperature conversions.
-            </p>
+              "Intuitive e-commerce platform for adding, adjusting quantities, and calculating prices in real time. Effortlessly modify or remove items, enhancing shopping convenience." </p>
             <a
-              href="https://akinurrahman.github.io/temperature/"
+              href="https://64df6f9e85e9130dbca88129--fluffy-babka-536823.netlify.app/"
               target="_blank"
               ><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i
             ></a>
