--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       <h2 class="heading">Latest <span>Projects</span></h2>
       <div class="portfolio-container">
         <div class="portfolio-cards">
-          <img src="portfolio images/Weather-update.avif" alt="weight" />
+          <img src="portfolio images/Weather-update.avif" alt="weather" />
           <div class="portfolio-layer">
             <h4>Weather App</h4>
             <p>
