--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
               Check out my Todo List app created using React. Stay organized by
               managing your tasks with this interactive app.
             </p>
-            <a href="https://super-yeot-5996a4.netlify.app/" target="_blank"
+            <a href="https://akinur-todo-app.netlify.app/" target="_blank"
               ><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i
             ></a>
           </div>
