--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               confidently with our intuitive and accurate weather web app.
             </p>
             <a
-              href="https://64d7611a9f906a6fce8c2bca--graceful-tanuki-9070d3.netlify.app/"
+              href="https://akinur-weather-app.netlify.app/"
               target="_blank"
               ><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i
             ></a>
