--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             <p>
               "Intuitive e-commerce platform for adding, adjusting quantities, and calculating prices in real time. Effortlessly modify or remove items, enhancing shopping convenience." </p>
             <a
-              href="https://64df6f9e85e9130dbca88129--fluffy-babka-536823.netlify.app/"
+              href="https://akinur-shopping-cart.netlify.app/"
               target="_blank"
               ><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i
             ></a>
