--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             ><i class="fa-regular fa-envelope"></i
           ></a>
         </div>
-        <!-- href="https://docs.google.com/document/d/1ou72MZiZdUw9oeAq66opjF7MPgFf7zwWFuoxRLBLeWQ/edit?usp=sharing" -->
-        <a href="" class="btn alert">Download Resume</a>
+        
+        <a href="https://drive.google.com/file/d/14XUu7slNkpTINb5I6nC3wG7nE7WtYY7J/view?usp=sharing" target="_blank" class="btn">Download Resume</a>
       </div>
 
       <div class="home-img">
